# AI-ICES-Enterprise-Email-Security-Middleware

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  plan.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
apps/core_hub/: dependencies.py  main.py
apps/core_hub/routers/: health.py  ingest.py
apps/dashboard_backend/: dependencies.py  main.py
apps/dashboard_backend/routers/: health.py  remediation.py  stats.py  threats.py
apps/gateway/: dependencies.py  main.py  milter_handler.py
apps/gateway/routers/: health.py
apps/governance_api/: dependencies.py  main.py
deployment/compose/: docker-compose.yml  prometheus.yml
deployment/docker/: Dockerfile.base  Dockerfile.cdr_engine  Dockerfile.celery_worker  Dockerfile.core_hub  Dockerfile.dashboard_backend  Dockerfile.gateway  Dockerfile.governance_api  Dockerfile.nlp_engine  Dockerfile.remediation_engine  Dockerfile.threat_orchestrator  Dockerfile.url_protection  Dockerfile.vision_engine
deployment/kubernetes/: README.md
services/cdr_engine/: dependencies.py  main.py  sanitizer.py  tasks.py
services/nlp_engine/: classifier.py  dependencies.py  main.py  tasks.py
services/remediation_engine/: clawback.py  dependencies.py  main.py  tasks.py
services/threat_orchestrator/: dependencies.py  main.py  scorer.py  tasks.py
services/url_protection/: dependencies.py  main.py  service.py  tasks.py
services/vision_engine/: dependencies.py  main.py  processor.py  tasks.py
shared/config/: __init__.py  settings.py
shared/database/: __init__.py  base.py  mixins.py  session.py
shared/logging/: __init__.py  logger.py
shared/rabbitmq/: __init__.py  client.py
shared/redis/: __init__.py  client.py
shared/schemas/: __init__.py  base.py  email.py  governance.py
shared/security/: __init__.py  jwt.py  rbac.py
shared/utils/: __init__.py  di.py  health.py
tests/: conftest.py  test_health.py  test_settings.py
workers/celery_worker/: celery_app.py
workers/scheduled_jobs/: __init__.py
(+21 files in other folders)
