[project]
name = "ai-ices"
version = "1.0.0"
description = "AI-ICES Enterprise Email Security Middleware"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "BA Systems", email = "engineering@basystems.com"},
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "aio-pika>=9.4.0",
    "redis[hiredis]>=5.0.0",
    "pymilter>=1.0.5",
    "celery>=5.4.0",
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "python-multipart>=0.0.9",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
include = ["shared*", "apps*", "services*", "workers*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
shared = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["shared", "apps", "services", "workers"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
exclude = ["venv/", "tests/"]
